# demos

./: .gitmodules  CMakeLists.txt  README.md
examples/: test_position_m31.cpp  test_sensor.cpp
graficas/: encoderfb-vel-fo-i15-0o90-000g.csv  encoderfb-vel-fo-i15-0o90-100g.csv  encoderfb-vel-fo-i15-0o90-200g.csv  encoderfb-vel-fo-i15-0o90-300g.csv  encoderfb-vel-fo-i15-0o90-400g.csv  encoderfb-vel-fo-i15-0o90-500g.csv  imufb-inc-fo-i15-0o90-000g.csv  imufb-inc-fo-i15-0o90-100g.csv  imufb-inc-fo-i15-0o90-200g.csv  imufb-inc-fo-i15-0o90-300g.csv  imufb-inc-fo-i15-0o90-400g.csv  imufb-inc-fo-i15-0o90-500g.csv  imufb-inc-fo-yes.csv
lib/sensor-integration/: CMakeLists.txt  SensorIntegration.h  SerialArduino.cpp  SerialArduino.h
main/: clInc20degstep.cpp  clinfinityshape.cpp  demo1.cpp  encoderfb-fo-yes.cpp  imufb-inc-fo-yes.cpp  ol-pos-360.cpp
tools/: motor-check.cpp  move-motor.cpp  start-pos.cpp  test_sensor.cpp
